<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="vertical">

    <TextView
        android:id="@+id/event_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_row="0"
        android:text="@string/createEvent_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/event_creator_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_row="1"
        android:text="@string/createEvent_creator"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/eventPictureView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/event_image_height"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_row="2"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/startDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_row="3"
        android:paddingRight="10dp"
        android:text="@string/eventFrag_from"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/event_start_date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="start"
        android:layout_row="3"
        android:text="@string/createEvent_startDate"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/endDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="end"
        android:layout_row="4"
        android:paddingRight="10dp"
        android:text="@string/eventFrag_to"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/event_end_date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="start"
        android:layout_row="4"
        android:text="@string/createEvent_endDate"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/addressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="end"
        android:layout_row="5"
        android:paddingRight="10dp"
        android:text="@string/eventFrag_at"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/event_address_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="300dp"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="start"
        android:layout_row="5"
        android:text="@string/createEvent_address"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tagsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="end"
        android:layout_row="6"
        android:paddingRight="10dp"
        android:text="@string/eventFrag_tags"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/event_tags_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="start"
        android:layout_row="6"
        android:text="@string/createEvent_tags"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="end"
        android:layout_row="7"
        android:paddingRight="10dp"
        android:text="@string/eventFrag_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/event_description_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="start"
        android:layout_marginTop="23dp"
        android:layout_row="7"
        android:text="@string/createEvent_description"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/delete_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="9"
        android:text="@string/event_fragment_delete"
        android:layout_gravity="start" />

    <Button
        android:id="@+id/update_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="end"
        android:layout_row="9"
        android:text="@string/event_fragment_update" />

    <Button
        android:id="@+id/list_participant_exp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_row="10"
        android:layout_columnSpan="2"
        android:layout_column="0" />

    <Button
        android:id="@+id/remove_user_from_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="11"
        android:text="@string/event_fragment_remove"
        android:layout_gravity="start" />

    <Button
        android:id="@+id/joinEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="end"
        android:layout_row="11"
        android:text="@string/event_fragment_join" />

</GridLayout>


