<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroundMain">

    <ImageView
        android:id="@+id/image_dialog"
        android:layout_width="fill_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginRight="6dp" />

    <EditText
        android:id="@+id/text_manage_dialog"
        android:layout_width="wrap_content"
        android:hint="@string/enter_user_to_add"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_dialog"
        android:textColor="#FFF"/>

    <Button
        android:id="@+id/add_user"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/manage_button_add"
        android:layout_below="@+id/text_manage_dialog"
        android:textColor="@color/textInButton"
        android:background="@drawable/button_draw"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        />

    <Button
        android:id="@+id/get_event_page"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/manage_button_go"
        android:layout_below="@+id/add_user"
        android:textColor="@color/textInButton"
        android:background="@drawable/button_draw"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        />

</RelativeLayout>