<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/creatingEvent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".gui.CreatingEventActivity">


    <TextView
        android:id="@+id/activityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/event_create_punch_line"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <GridLayout
        android:id="@+id/gridView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activityTitle"
        android:layout_marginTop="38dp">

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="First name "
            android:id="@+id/firstNameLabel"
            android:layout_below="@+id/title"
            android:layout_alignParentStart="true"
            android:layout_row="0"
            android:layout_column="0"
            android:translationZ="0dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/firstName"
            android:layout_toEndOf="@+id/firstNameLabel"
            android:layout_row="0"
            android:layout_column="1" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Last name "
            android:id="@+id/lastNameLabel"
            android:layout_below="@+id/firstNameLabel"
            android:layout_alignParentStart="true"
            android:layout_row="2"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/lastName"
            android:layout_toEndOf="@+id/lastName"
            android:layout_row="2"
            android:layout_column="1" />
        -->

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/event_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_toEndOf="@+id/titleLabel"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/title" />

        <TextView
            android:id="@+id/eventAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/event_address"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <AutoCompleteTextView
            android:id="@+id/eventAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/autocomplete_hint"
            android:singleLine="true" />

        <TextView
            android:id="@+id/place_details"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autoLink="all"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/place_attribution"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autoLink="all"
            android:paddingTop="@dimen/vertical_page_margin"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <!--        <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/eventAddress"
                    android:layout_row="3"
                    android:layout_column="1" />-->

        <TextView
            android:id="@+id/eventDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/event_description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/eventDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_row="4"
            android:ems="10"
            android:inputType="textPersonName"
            android:minLines="3" />

        <TextView
            android:id="@+id/startDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/event_start_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/startDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_row="5"
            android:ems="10"
            android:inputType="date"
            android:minLines="3" />

        <TextView
            android:id="@+id/endDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/event_end_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/endDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_row="6"
            android:ems="10"
            android:inputType="date"
            android:minLines="3" />

        <TextView
            android:id="@+id/tagLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="7"
            android:text="@string/event_tags"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </GridLayout>

    <Button
        android:id="@+id/submitEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/pictureButton"
        android:text="@string/event_validate" />

    <ExpandableListView
        android:id="@+id/lvExp"
        android:layout_width="123dp"
        android:layout_height="158dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gridView" />

    <Button
        android:id="@+id/pictureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/submitEvent"
        android:layout_below="@+id/gridView"
        android:text="@string/createEvent_buttonAddEvent" />

    <ImageView
        android:id="@+id/pictureView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/submitEvent"
        android:layout_toEndOf="@+id/lvExp"
        android:minHeight="400dp"
        android:minWidth="400dp" />


</RelativeLayout>
